<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SoundCloud</string>
    <string name="wallpaper_desc">SoundCloud Random WaveForm Wallpaper</string>
    <string name="service_preferences">SoundCloud Preferences</string>

    <string name="credentials">SoundCloud Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>

    <string name="look_and_feel">Effects</string>
    <string name="enable_blur">Enable Blur</string>
    <string name="enable_color">Enable Color Rotation</string>
</resources>
